--- a/tornado.yaml
+++ b/tornado.yaml
@@ -2,25 +2,27 @@
 #
 # Copy this file to config.yaml or <hostname>.yaml and adjust values as needed.
 # Values in this file provide defaults. Create an additional YAML file named
-# after the current host (e.g. fury.yaml) in the same directory to override
+# after the current host (e.g. tornado.yaml) in the same directory to override
 # specific settings per machine.
 #
 # Boolean flags accept true/false. Omit or set to null to inherit defaults.
 
 steps:
+  ensureGroovy:
+    # Ensure Groovy is installed before running other steps.
+    enabled: true
+
   AdminGroupNopass:
     # Automatically add the invoking user to the passwordless admin group.
     adminGroup: admin
     addCurrentUser: true
     # Additional accounts to add to the admin group.
     users:
-      - admin
+      - jallen
 
   Essentials:
     # Install baseline CLI packages required on all systems.
     packages:
-      # Use "<package> alias <target>" to install a package, remove any package owning the target command, and point update-alternatives at the package's primary binary.
-      # Use "<package> alias <source> -> <target>" to override the source command.
       - curl
       - wget
       - zip
@@ -37,9 +39,9 @@ steps:
 
   NisSetup:
     # Provide a domain to enable NIS provisioning; leave null to skip.
-    domain:
+    domain: dublinux.lan
     # Either a bare host/IP or a full "ypserver <host>" line.
-    server:
+    server: 10.0.0.1
 
   Nsswitch:
     # Ensure NIS entries are present in nsswitch.conf.
@@ -61,7 +63,8 @@ steps:
     # Ensure the current user is a member of the docker group.
     ensureUser: true
     # Additional accounts to place in the docker group.
-    users: []
+    users:
+      - jallen
     enabled: true
 
   SdkmanInstall:
@@ -70,7 +73,7 @@ steps:
 
   SdkmanMavenInstall:
     # Manage Maven installation via SDKMAN.
-    version: 3.9.11
+    version: null
     enabled: true
 
   SdkmanJavaInstall:
@@ -86,35 +89,16 @@ steps:
     # Install the Insomnia API client.
     enabled: true
 
-  GoogleChromeInstall:
-    # Install Google Chrome Stable via the Google apt repository.
-    enabled: false
-
   JetbrainsToolbox:
     # Install JetBrains Toolbox for IDE management.
     enabled: true
 
+  GoogleChromeInstall:
+    # Install Google Chrome Stable via the Google apt repository.
+    enabled: true
+
   DebianMirror:
-    # Configure and serve a local Debian apt mirror via Apache.
     enabled: false
-    siteFqdn: mirror.dublinux.lan
-    mirrorRoot: /var/ftp/pub/mirrors
-    distributions:
-      - bookworm
-      - trixie
-    components:
-      - main
-      - contrib
-      - non-free
-      - non-free-firmware
-    includeUpdates: true
-    includeBackports: true
-    securitySuites:
-      - bookworm-security
-      - trixie-security
-    threads: 20
-    runInitialSync: true
-    cronEnabled: true
 
   ExtendSuspend:
     # Ensure the system idle suspend delay is extended.
