--- a/config-template.yaml
+++ b/config-template.yaml
@@ -72,6 +72,22 @@ steps:
     # Install and enforce pam_mkhomedir for creating home directories.
     enabled: true
 
+  Autofs:
+    # Configure autofs maps for on-demand mounts.
+    enabled: false
+    # Optional; defaults to /etc/auto.master.d/devbox.autofs
+    masterFile: /etc/auto.master.d/devbox.autofs
+    maps:
+      /mnt/auto:
+        # Optional; defaults to /etc/auto.<name> where name derives from mount or name.
+        mapFile: /etc/auto.devbox
+        # Options applied on the master line, e.g. --timeout, --ghost.
+        options: "--timeout=300 --ghost"
+        entries:
+          data:
+            options: "-fstype=nfs,rw"
+            location: "nas.lan:/exports/data"
+
   DockerInstall:
     # Install Docker Engine and related tooling from the official repository.
     enabled: true
@@ -128,6 +144,7 @@ steps:
       - non-free-firmware
     includeUpdates: true
     includeBackports: true
+    includeContents: true
     securitySuites:
       - bookworm-security
       - trixie-security
