--- a/spitfire.yaml
+++ b/spitfire.yaml
@@ -86,6 +86,7 @@ steps:
       - non-free-firmware
     includeUpdates: true
     includeBackports: true
+    includeContents: true
     securitySuites:
       - bookworm-security
       - trixie-security
