--- a/spitfire.yaml
+++ b/spitfire.yaml
@@ -154,11 +154,19 @@ steps:
           path: /data/share/rallen
           browseable: true
           readOnly: false
-          validUsers:
-            - rallen
-          forceUser: rallen
-          forceGroup: users
+        validUsers:
+          - rallen
+        forceUser: rallen
+        forceGroup: users
 
+  NfsServer:
+    # Export /data via NFS for trusted hosts.
+    enabled: true
+    defaultOptions: rw,sync,no_subtree_check,no_root_squash
+    exports:
+      - path: /data
+        clients:
+          - tornado
   EspReplicate:
     # Replicate the EFI System Partition and install GRUB on matching disks.
     # Use true to apply, false to skip, or info to display planned actions only.
