Document placeholder Joker sample

--- a/config/joker-config.sample.yaml
+++ b/config/joker-config.sample.yaml
@@ -4,18 +4,18 @@ cacheFile: /etc/cachedexternalip
 jokerEndpoint: https://svc.joker.com/nic/update
 timeoutSeconds: 15
 updates:
-  - user: 17e7444298b0ac73
-    password: 2eff408ed360f82d
-    hostname: dublinux.net
-  - user: 17e7444298b0ac73
-    password: 2eff408ed360f82d
-    hostname: mirror.dublinux.net
-  - user: 17e7444298b0ac73
-    password: 2eff408ed360f82d
-    hostname: ssh.dublinux.net
-  - user: 17e7444298b0ac73
-    password: 2eff408ed360f82d
-    hostname: netnanny.dublinux.net
-  - user: 17e7444298b0ac73
-    password: 2eff408ed360f82d
-    hostname: jellyfin.dublinux.net
+  - user: joker-user
+    password: sadf78a9
+    hostname: example.com
+  - user: joker-user
+    password: sadf78a9
+    hostname: mirror.example.com
+  - user: joker-user
+    password: sadf78a9
+    hostname: ssh.example.com
+  - user: joker-user
+    password: sadf78a9
+    hostname: netnanny.example.com
+  - user: joker-user
+    password: sadf78a9
+    hostname: jellyfin.example.net
