Simplify Joker config

--- a/steps/97.0-JokerDns/joker-config.sample.yaml
+++ b/steps/97.0-JokerDns/joker-config.sample.yaml
@@ -2,13 +2,9 @@ ipSource: https://checkip.amazonaws.com
 cacheFile: /etc/cachedexternalip
 jokerEndpoint: https://svc.joker.com/nic/update
 timeoutSeconds: 15
+user: joker-user
+password: placeholder
 updates:
-  - user: joker-user
-    password: placeholder
-    hostname: example.com
-  - user: joker-user
-    password: placeholder
-    hostname: mirror.example.com
-  - user: joker-user
-    password: placeholder
-    hostname: ssh.example.com
+  - example.com
+  - mirror.example.com
+  - ssh.example.com
