--- a/steps/97.0-JokerDns/joker-config.sample.yaml
+++ b/steps/97.0-JokerDns/joker-config.sample.yaml
@@ -1,12 +1,10 @@
 jokerEndpoint: https://svc.joker.com/nic/update
 timeoutSeconds: 15
-user: joker-user
-password: placeholder
-scriptPath: /usr/local/bin/joker-dns-update
-cronSchedule: "* * * * *"
-cronLogFile: /var/log/joker-dns.log
-sdkmanDir: /root/.sdkman
-updates:
-  - example.com
-  - mirror.example.com
-  - ssh.example.com
+user: joker-user-xxxx
+password: placeholder-password
+hosts:
+  - dublinux.net
+  - mirror.dublinux.net
+  - ssh.dublinux.net
+  - netnanny.dublinux.net
+  - jellyfin.dublinux.net
